# protoc-gen-rust-grpc

./: MODULE.bazel  README.md
src/: BUILD  rust_generator.cc  rust_generator.h  rust_plugin.cc
